<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/camera_overlay_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/semi_transparent_black"
        android:padding="30dp"
        android:visibility="gone" >

        <ProgressBar
            style="@android:style/Widget.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="1" >

        <ImageButton
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:contentDescription="@string/layout_button_plus_description_size"
            android:onClick="onPlusClick"
            android:padding="10dp"
            android:src ="@drawable/add_circle_black"/>


        <ImageButton
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:contentDescription="@string/layout_button_minus_description_size"
            android:onClick="onMinusClick"
            android:padding="10dp"
            android:src ="@drawable/remove_circle_black" />

        <ImageButton
            android:id="@+id/plus_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:contentDescription="@string/layout_button_plus_sampling_description"
            android:onClick="onPlusClick2"
            android:padding="10dp"
            android:src ="@drawable/add_circle_outline_black" />

        <ImageButton
            android:id="@+id/minus_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:contentDescription="@string/layout_button_minus_sampling_description"
            android:onClick="onMinusClick2"
            android:padding="10dp"
            android:src ="@drawable/remove_circle_outline_black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="1" >

        <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
        	android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:contentDescription="@string/content_desc_camera_button"
            android:onClick="onCameraClick"
            android:padding="10dp"
            android:src="@drawable/camera_button_background" />

    </LinearLayout>

</RelativeLayout>